# survival-of-the-funded

./: .gitignore  README.md  pyproject.toml
docs/: EXPERIMENTS_FINANCING.md  EXTENSIONS.md  RESULTS_COMPARISON.md  VARIABLE_MAPPING.md
src/: build_dataset.py  build_extended.py  competing_risks.py  config.py  gpu_survival.py  imputation.py  liml_models.py  ml_survival.py  run_all.py  run_extensions.py  survival_cox.py  visualize.py
src/experiments/: cleaning_filters.py  financing_grid.py  timevarying_cox.py
