[project]
name = "survival-of-the-funded"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lifelines>=0.30.3",
    "linearmodels>=7.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pypdf>=6.13.2",
    "pyreadstat>=1.3.5",
    "python-docx>=1.2.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]
